index페이지 아이디 비밀번호 input창 클릭시 이벤트 추가

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -80,9 +80,10 @@ ui{
     color: black;
     border: none;
     outline: 0;
+    cursor: pointer;
 }
 
-.input_box.focus{
+.focus{
     border: 1px solid black;
 }
 
