--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,17 +15,17 @@
             <h2 class="login_text">로그인</h2>
             <div class="padding_box">
                 <div class="id_pw_box">
-                    <div class="input_box focus">
+                    <div class="input_box" id="id_box">
                         <div class="icon_cell" id="id_cell">
                             <span class="icon_id"></span>
                         </div>
-                        <input class="input_text" type="text" placeholder="아이디">
+                        <input id="id_text"class="input_text" type="text" placeholder="아이디">
                     </div>
-                    <div class="input_box">
+                    <div class="input_box" id="pw_box">
                         <div class="icon_cell" id="pw_cell">
                             <span class="icon_pw"></span>
                         </div>
-                        <input class="input_text" type="password" placeholder="비밀번호">
+                        <input id="pw_text" class="input_text" type="password" placeholder="비밀번호">
                     </div>
                 </div>
                 <div class="login_btn_box">
@@ -47,6 +47,6 @@
     </div>
     
 </div>
-
+<script src="/js/main.js"></script>
 
 </html>
