--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -11,6 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#root{
+  height: 100%;
+}
 
 * {
   margin: 0;
@@ -18,4 +21,9 @@ code {
 }
 li {
   list-style: none;
+}
+
+html,
+body {
+  height: 100%;
 }
