로그인 아이디 비번 회원가입 링크 추가 및 회원관리 ui 추가

--- a/frontend/src/css/Login.module.css
+++ b/frontend/src/css/Login.module.css
@@ -112,6 +112,21 @@
      cursor: pointer;
      
    }
+   .link_box {
+       width: 100%;
+       margin-top: 10px;
+       position: relative;
+       text-align: center;
+   }
+
+   .link_box a{
+       color: black;
+       text-decoration: none;
+       margin-right: 10px;
+   }
+
+
+
    
    @media (max-width: 632px){
      .login_box {
