--- a/frontend/src/css/Member.module.css
+++ b/frontend/src/css/Member.module.css
@@ -13,3 +13,102 @@
 .main_title span {
     font-size: 32px;
 }
+.btn_box {
+    width: 100%;
+    height: 50px;
+    margin-bottom: 20px;
+}
+
+.btn_box button {
+    float: right;
+    width: 134px;
+    height: 50px;
+    border-radius: 20px;
+    background-color: #605f5f;
+    border: 0;
+    color: #eeeeee;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 15px;
+    justify-items: center;
+    display: flex;
+    cursor: pointer;
+}
+
+.btn_box button span {
+    margin-left: 10px;
+}
+
+.select_box {
+    position: relative;
+    width: 100%;
+    background-color: gray;
+    height: 45px;
+    border-radius: 20px;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    justify-content:center;
+    padding: 10px;
+}
+.is_width250 {
+    width: 250px;
+    margin-right: 10px;
+}
+.is_width300 {
+    width: 300px;
+    margin-right: 10px;
+    background-color: white;
+}
+
+.select_box  {
+    margin-bottom: 30px;
+}
+
+.select_box select {
+    width: 230px;
+    height: 40px;
+}
+
+
+.select_box input {
+    width: 280px;
+    height: 40px;
+    font-weight: 400;
+    font-size: 16px;
+    border: 0;
+}
+
+.status_item_list table {
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    border-collapse: collapse;
+}
+.status_item_list table th {
+    padding: 10px;
+    position: sticky;
+    top:0px;
+}
+.status_item_list table th {
+    border: 1px solid #c5c5c5;
+    background-color: #eee;
+
+}
+.status_item_list table td {
+    border: 1px solid #c5c5c5;
+    padding: 10px;
+}
+
+.status_item_list table button {
+    width: 100px;
+    height: 30px;
+    margin: 0 10px;
+    border: 0;
+    background-color: #605f5f;
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    border-radius: 20px;
+}
+
