--- a/frontend/src/css/SingUp.module.css
+++ b/frontend/src/css/SingUp.module.css
@@ -1,12 +1,19 @@
-.signup{
-    margin-top: 100px;
+.main{
     display: flex;
     flex-direction: column;
     align-items:center;
-
+    background-color: #eceff1;
+    width: 100%;
+    height: 100%;
+}
+.signup{
+    flex-direction: column;
+    align-items:center;
+    margin-top: 100px;
+    display: flex;
 }
 .logo{
-    width: 200px;
+    width: 300px;
     height: 30px;
     background-color: black;
     padding: 30px;
@@ -15,8 +22,27 @@
     margin-top: 30px;
 }
 .profile > ul> li >input{
-    width: 300px;
-    height: 30px;
+    width: 500px;
+    height: 50px;
     border: 1px solid black;
     margin: 5px 0px 5px 0px ;
+    padding-left: 5px;
+}
+.input_error{
+    color: red;
+    display: none;
+}
+.button_size{
+    width: 70px;
+    height: 50px;
+    margin-left: 5px;
+    border-radius:10px;
+}
+.button_send{
+    width: 500px;
+    display: flex;
+    justify-content: space-around;
+}
+div >.button_size{
+    width: 500px;
 }
