--- a/frontend/src/css/SingUp.module.css
+++ b/frontend/src/css/SingUp.module.css
@@ -1,4 +1,4 @@
-.main{
+.frame{
     display: flex;
     flex-direction: column;
     align-items:center;
@@ -27,6 +27,8 @@
     border: 1px solid black;
     margin: 5px 0px 5px 0px ;
     padding-left: 5px;
+    font-size: larger;
+
 }
 .input_error{
     color: red;
@@ -45,4 +47,5 @@
 }
 div >.button_size{
     width: 500px;
+
 }
