--- a/frontend/src/css/SingUp.module.css
+++ b/frontend/src/css/SingUp.module.css
@@ -1,51 +1,68 @@
-.frame{
+body{
+    height: 100%;
+    background-color: #eceff1;
+}
+.frame {
     display: flex;
     flex-direction: column;
-    align-items:center;
+    align-items: center;
     background-color: #eceff1;
     width: 100%;
     height: 100%;
 }
-.signup{
+
+.signup {
     flex-direction: column;
-    align-items:center;
+    align-items: center;
     margin-top: 100px;
     display: flex;
 }
-.logo{
+
+.logo {
     width: 300px;
     height: 30px;
     background-color: black;
     padding: 30px;
 }
-.profile{
+
+.profile {
     margin-top: 30px;
 }
-.profile > ul> li >input{
+
+.profile > ul > li > div {
     width: 500px;
     height: 50px;
     border: 1px solid black;
-    margin: 5px 0px 5px 0px ;
-    padding-left: 5px;
-    font-size: larger;
-
+    background-color: white;
+    margin: 10px 0px 10px 0px;
 }
-.input_error{
+.profile > ul > li >div> input {
+    width: 490px;
+    height: 50px;
+    font-size: larger;
+    margin-left: 10px;
+}
+
+.input_error {
     color: red;
     display: none;
 }
-.button_size{
+
+.button_size {
     width: 70px;
     height: 50px;
     margin-left: 5px;
-    border-radius:10px;
+    border-radius: 10px;
 }
-.button_send{
+
+.button_send {
     width: 500px;
     display: flex;
     justify-content: space-around;
 }
-div >.button_size{
-    width: 500px;
+
+div > .button_size {
+    width: 100%;
+    margin-top: 10px;
 
 }
