--- a/frontend/src/css/SingUp.module.css
+++ b/frontend/src/css/SingUp.module.css
@@ -1,7 +1,4 @@
-body{
-    height: 100%;
-    background-color: #eceff1;
-}
+
 .frame {
     display: flex;
     flex-direction: column;
@@ -30,14 +27,14 @@ body{
 }
 
 .profile > ul > li > div {
-    width: 500px;
+    width: 100%;
     height: 50px;
     border: 1px solid black;
     background-color: white;
     margin: 10px 0px 10px 0px;
 }
 .profile > ul > li >div> input {
-    width: 490px;
+    width: 100%;
     height: 50px;
     font-size: larger;
     margin-left: 10px;
