--- a/frontend/src/center/css/PT.module.css
+++ b/frontend/src/center/css/PT.module.css
@@ -1,5 +1,6 @@
 .main_wrap {
     padding:0 30px 0 102px;
+    height: 100%;
 }
 
 .main_wrap  hr{
@@ -21,7 +22,6 @@
     -webkit-box-align: center;
     align-content: center;
     width: 100%;
-    height: 100%;
 }
 
 .btn_box span {
@@ -31,5 +31,70 @@
 .btn {
     border: 0;
     background-color: white;
+    cursor: pointer;
+}
+.calendar_wrap {
+    width: 100%;
+    height: 74%;
+}
+.calendar_week {
+    width: 100%;
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    margin: 40px 0px;
+}
+.calendar_week div {
+    width: 13%;
+}
+.calendar_day {
+    width: 100%;
+    height: 16%;
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+}
+.calendar_day div{
+    width: 13%;
+    height: 100%;
+    display: flex;
+}
+.calendar_day div span{
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.today {
+    background-color: red;
+}
+
+.calendar_wrap div:first-child {
+    text-align: center;
+}
+
+.calendar_wrap div div:first-child{
+    color: red;
+}
+
+.calendar_wrap div div:last-child{
+    color: blue;
+}
+
+.flex_box {
+    position: fixed;
+    align-items: center;
+    left: 92%;
+    top: 87%;
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
+    background-color: #343232;
+    display: flex;
+    justify-content: center;
+    transform: rotate(45deg);
     cursor: pointer;
 }
