--- a/frontend/src/user/css/User_Main.module.css
+++ b/frontend/src/user/css/User_Main.module.css
@@ -1,25 +1,44 @@
 
-.hader{
+.hader {
     width: 100%;
     height: 10%;
-    background: #343232;
+    background: #c5c5c5;
 
 }
-.hader>ul>li{
-    display: inline-block;
-    background-color: red;
+
+.hader > ul {
+    display: flex;
+    flex-direction: row;
+
+}
+
+.menu {
+    width: 70%;
+    height: 10%;
+    display: flex;
+}
+
+.menu > li {
     width: 20%;
     height: 100%;
-
+    border: 1px solid black;
+    text-align: center;
 }
-.logo_btn{
-    padding: 10px;
+.menu>li>ul{
+    visibility: hidden;
+    border: 1px solid red;
+}
+
+
+.logo_btn {
+    padding: 20px;
     width: 30%;
     height: 10%;
     text-align: center;
 
 }
-.logo{
+
+.logo {
     width: 80%;
     height: 100%;
 }
