--- a/frontend/src/center/css/Login.module.css
+++ b/frontend/src/center/css/Login.module.css
@@ -1,141 +1,149 @@
 .warp {
     position: relative;
     height: 100%;
-   
-   }
-   .header {
-     margin-bottom: 40px;
-     box-sizing: border-box;
-   
-   }
-   .logo_box{
-     position: relative;
-     width: 300px;
-     margin: 0 auto;
-     text-align: center;
-   }
-   .main_logo {
-     display: inline-block;
-     width: 300px;
-     height: 60px;
-     margin-top: 110px;
-   
-   }
-   .login_box {
-     position: relative;
-     width: 540px;
-     margin: 0 auto;
-     box-sizing: border-box;
-   }
-   .login_wrap {
-     border: 1px solid black;
-     
-   }
-   
-   .login_text_box {
-     text-align: center;
-     margin: 20px 0;
-     font-size: 16px;
-     font-weight: 600;
-   }
-   
-   .input_box {
-     position: relative;
-     height: 100%;
-     border: 1px solid gray;
-     padding: 16px 17px;
-     display: table;
-     width: 100%;
-     box-sizing: border-box;
-   }
-   .input_box:first-child {
+
+}
+
+.header {
+    margin-bottom: 40px;
+    box-sizing: border-box;
+}
+
+.logo_box {
+    position: relative;
+    width: 300px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.main_logo {
+    display: inline-block;
+    width: 300px;
+    height: 60px;
+    margin-top: 110px;
+
+}
+
+.login_box {
+    position: relative;
+    width: 540px;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+
+.login_wrap {
+    border: 1px solid black;
+
+}
+
+.login_text_box {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.input_box {
+    position: relative;
+    height: 100%;
+    border: 1px solid gray;
+    padding: 16px 17px;
+    display: table;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.input_box:first-child {
     border-radius: 6px 6px 0 0;
-   }
-   .input_box:last-child {
+}
+
+.input_box:last-child {
     border-radius: 0 0 6px 6px;
-   }
-   
-   .icon_box{
-     display: table-cell;
-     width: 26px;
-   }
-   
-   .icon_id {
-     background-image: url(../../login_person.png);
-     width: 20px;
-     height: 20px;
-     display: table-cell;
-   }
-   
-   .icon_pw {
-     background-image: url(../../login_lock.png);
-     width: 20px;
-     height: 20px;
-     display: table-cell;
-   }
-   
-   input{
-     border: none;
-     appearance: none;
-     outline: 0;
-     text-decoration: none;
-     cursor: pointer;
-     height: 20px;
-   }
-   
-   .input_text{
-     position: relative;
-     width: 100%;
-     font-size: 16px;
-     font-weight: 400;
-     line-height: 24px;
-     box-sizing: border-box;
-   }
-   .input_wrap {
-     position: relative;
-     padding:  20px;
-   }
-   
-   .btn_wrap {
-     padding:  20px;
-   }
-   
-   .login_btn {
-     width: 100%;
-     border-radius: 6px;
-     padding: 17px 0 15px;
-     border: solid 1px rgba(0,0,0,.15);
-     background-color: black;
-     color: white;
-     font-size: 20px;
-     font-weight: 900;
-     cursor: pointer;
-     
-   }
-   .link_box {
-       width: 100%;
-       margin-top: 10px;
-       position: relative;
-       text-align: center;
-   }
+}
 
-   .link_box a{
-       color: black;
-       text-decoration: none;
-       margin-right: 10px;
-   }
+.input_wrap {
+    position: relative;
+    padding: 20px;
+}
+
+.icon_box {
+    display: table-cell;
+    width: 26px;
+}
+
+.icon_id {
+    background-image: url(../../login_person.png);
+    width: 20px;
+    height: 20px;
+    display: table-cell;
+}
+
+.icon_pw {
+    background-image: url(../../login_lock.png);
+    width: 20px;
+    height: 20px;
+    display: table-cell;
+}
+
+input {
+    border: none;
+    appearance: none;
+    outline: 0;
+    text-decoration: none;
+    cursor: pointer;
+    height: 20px;
+}
+
+.input_text {
+    position: relative;
+    width: 100%;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    box-sizing: border-box;
+}
 
 
+.btn_wrap {
+    padding: 20px;
+}
 
-   
-   @media (max-width: 632px){
-     .login_box {
-         width: 100%;
-         padding: 0 20px;     
-     }
-     .main_logo {
-       width: 236px;
-       height: 52px;
-     }
-   }
+.login_btn {
+    width: 100%;
+    border-radius: 6px;
+    padding: 17px 0 15px;
+    border: solid 1px rgba(0, 0, 0, .15);
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    font-weight: 900;
+    cursor: pointer;
+
+}
+
+.link_box {
+    width: 100%;
+    margin-top: 10px;
+    position: relative;
+    text-align: center;
+}
+
+.link_box a {
+    color: black;
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+
+@media (max-width: 632px) {
+    .login_box {
+        width: 100%;
+        padding: 0 20px;
+    }
+
+    .main_logo {
+        width: 236px;
+        height: 52px;
+    }
+}
    
