--- a/frontend/src/center/css/Singup.module.css
+++ b/frontend/src/center/css/Singup.module.css
@@ -24,14 +24,14 @@
     margin-top: 110px;
 }
 
-.singup_box {
+.singUp_box {
     position: relative;
     width: 600px;
     margin: 0 auto;
     box-sizing: border-box;
 }
 
-.singup_text_box {
+.singUp_text_box {
     text-align: center;
     margin: 20px 0;
     font-size: 16px;
@@ -51,7 +51,7 @@
 .input_box {
     position: relative;
     border: 1px solid gray;
-    padding: 16px 17px;
+    padding: 10px 10px;
     display: table;
     width: 100%;
     height: 51px;
@@ -74,6 +74,7 @@ input {
 .input_text {
     position: relative;
     width: 100%;
+    height: 100%;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
@@ -88,7 +89,7 @@ input {
     font-size: 14px;
 }
 @media (max-width: 632px) {
-    .singup_box {
+    .singUp_box {
         width: 100%;
         padding: 0 20px;
     }
