--- a/frontend/src/user/css/User_SingUp.module.css
+++ b/frontend/src/user/css/User_SingUp.module.css
@@ -80,4 +80,7 @@
 .button_send>button{
     width: 30%;
     height: 100%;
+    border-radius: 30px;
+    background-color:silver;
+    color: black;
 }
