--- a/frontend/src/user/css/User_Main.module.css
+++ b/frontend/src/user/css/User_Main.module.css
@@ -1,94 +1,10 @@
 
+
 .frame {
     width: 100%;
-    height: 100vh;
-}
-
-.hader {
-    width: 100%;
-    height: 15%;
-background-color: #c5c5c5;
-}
-
-.hader > ul {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.logo_btn {
-    padding: 20px;
-    width: 30%;
-    height: 10%;
-    text-align: center;
-}
-
-.logo {
-    width: 80%;
     height: 100%;
 }
-
-.menu {
-    width: 70%;
-    height: 10%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.menu > li {
-    width: 20%;
-    height: 100%;
-    text-align: center;
-
-}
-
-.menu>li:hover{
-    background-color: white;
-    height: 20px;
-    border-radius: 30px;
-}
-
-.menu>li>ul{
-    width: 100%;
-    visibility: hidden;
-    height: 0px;
-}
-
-.menu>li>ul>a>li{
-    background-color: #c5c5c5;
-    position: relative;
-    z-index: 10;
-    height: 40px;
-    opacity: 0.8;
-}
-a{
-    text-decoration: none;
-}
-a:visited{
-    text-decoration: none;
-    color: black;
-}
-
-.menu> li:hover li{
-    visibility: visible;
-
-}
-
-.login{
-    width: 20%;
-    height: 100%;
-    text-align: center;
-}
-
-.login>a>button{
-    width: 50%;
-    height: 100%;
-}
-
 .body{
-    position: relative;
-    z-index: 2;
     width: 100%;
     height: 70%;
 }
@@ -98,3 +14,77 @@ a:visited{
     height: 100%;
 }
 
+/*.hader {*/
+/*    width: 100%;*/
+/*    height: 15%;*/
+/*    background-color: #c5c5c5;*/
+/*}*/
+
+/*.menulist{*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    align-items: center;*/
+/*}*/
+
+/*.logobox {*/
+/*    padding: 20px;*/
+/*    width: 30%;*/
+/*    height: 10%;*/
+/*    text-align: center;*/
+/*}*/
+
+/*.logo {*/
+/*    width: 80%;*/
+/*    height: 100%;*/
+/*}*/
+
+/*.menu {*/
+/*    width: 70%;*/
+/*    height: 10%;*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    align-items: center;*/
+/*}*/
+
+/*.menu > li {*/
+/*    width: 20%;*/
+/*    height: 100%;*/
+/*    text-align: center;*/
+
+/*}*/
+
+/*.menu>li:hover{*/
+/*    background-color: white;*/
+/*    height: 20px;*/
+/*    border-radius: 30px;*/
+/*}*/
+
+/*.menu>li>ul{*/
+/*    width: 100%;*/
+/*    visibility: hidden;*/
+/*    height: 0px;*/
+/*}*/
+
+/*.menu>li>ul>a>li{*/
+/*    background-color: #c5c5c5;*/
+/*    position: relative;*/
+/*    z-index: 10;*/
+/*    height: 40px;*/
+/*    opacity: 0.8;*/
+/*}*/
+
+/*.menu> li:hover li{*/
+/*    visibility: visible;*/
+
+/*}*/
+
+/*.login{*/
+/*    width: 20%;*/
+/*    height: 100%;*/
+/*    text-align: center;*/
+/*}*/
+
+/*.login>a>button{*/
+/*height: 100%;*/
+/*width: 50%;*/
+/*}*/
