--- a/frontend/src/user/css/User_Attendance.module.css
+++ b/frontend/src/user/css/User_Attendance.module.css
@@ -7,3 +7,24 @@
     width: 100%;
     height: 30%;
 }
+.circlebox{
+    width: 300px;
+    height: 200px;
+
+}
+
+.circle{
+
+    fill: transparent;
+    stroke: #333; stroke-width: 20px;
+
+    /* 테두리 점선 */
+    /*stroke-dasharray: 10px; - 점선도 10px 간격도 10px */
+    stroke-dasharray: 565px; /* 200px일때의 점선 길이 */
+
+    /*transform: rotate(-90deg); !* 시작상단으로 돌리기 위해 사용 *!*/
+    transform-origin: center center; /* 반드시 작성 */
+    stroke: pink;
+    stroke-dashoffset: 395px;
+}
+
