--- a/frontend/src/user/css/User_Main_hader.module.css
+++ b/frontend/src/user/css/User_Main_hader.module.css
@@ -6,13 +6,14 @@ a:visited{
     color: black;
 }
 .hader{
+    border: 1px solid white;
     display: flex;
     width: 100%;
     height: 15%;
-    background-color: gray;
+    background-color: silver;
 }
 .logobox{
-    width: 30%;
+    width: 20%;
     height: 100%;
 }
 .logobox>a{
@@ -30,14 +31,18 @@ a:visited{
 
 .menulist{
     display: flex;
-    width: 70%;
-    /*overflow: hidden;*/
+    width: 60%;
+    overflow: hidden;
 }
 .menulist>li{
-    width: 20%;
+    width: 25%;
+}
+.menulist:hover{
+    overflow: visible;
+    /*visibility: visible;*/
 }
 .menulist>li>a{
-    border: 1px solid white;
+    border-left: 1px solid white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,16 +50,36 @@ a:visited{
     height: 100%;
 }
 .menu{
-    text-align: center;
-    height: 100%;
+    position: relative;
+    height: 150%;
+    background-color: rgba( 255, 255, 255, 0.5 );
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /*visibility: hidden;*/
+}
+.menu>li{
+    margin-top: 10px;
 }
 
 
 
 .login{
+    border-left: 1px solid white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100%;
     width: 20%;
-    text-align: center;
-    display: inline-block;
-    background-color: #517ee1;
+}
+.login>a{
+    height: 30%;
+    width: 30%;
+}
+.login>a>button{
+    height: 100%;
+    width: 100%;
+    font-size: large;
+    border-radius: 10px;
 }
