--- a/frontend/src/user/css/User_Attendance.module.css
+++ b/frontend/src/user/css/User_Attendance.module.css
@@ -3,28 +3,56 @@
     height: 100%;
     overflow: auto;
 }
-.progress{
+
+.attendance {
     width: 100%;
     height: 30%;
-}
-.circlebox{
-    width: 300px;
-    height: 200px;
-
+    display: flex;
+    justify-content: center;
 }
 
-.circle{
+.circlebox {
+    width: 25%;
 
+}
+.progress{
+    text-align: center;
+    width:20%;
+}
+.progress>p{
+    display: inline-block;
+    color: red;
+    margin-top: 40%;
+}
+.bar{
+    width: 100%;
+}
+
+.circle {
     fill: transparent;
-    stroke: #333; stroke-width: 20px;
-
-    /* 테두리 점선 */
-    /*stroke-dasharray: 10px; - 점선도 10px 간격도 10px */
-    stroke-dasharray: 565px; /* 200px일때의 점선 길이 */
-
+    stroke: #333;
+    stroke-width: 15px;
     /*transform: rotate(-90deg); !* 시작상단으로 돌리기 위해 사용 *!*/
-    transform-origin: center center; /* 반드시 작성 */
+    /*transform-origin: center center; !* 반드시 작성 *!*/
     stroke: pink;
-    stroke-dashoffset: 395px;
+    stroke-dashoffset: 126px;
 }
-
+.boardbox{
+    width: 100%;
+    height: 70%;
+}
+.table{
+    width: 100%;
+    text-align: center;
+}
+progress {
+    -webkit-appearance: none;
+}
+::-webkit-progress-bar {
+    border-radius: 10px;
+    background-color: wheat;
+}
+::-webkit-progress-value {
+    border-radius: 11px;
+    background-color: pink;
+}
